cursor shadow-box

--- a/Css3/style.css
+++ b/Css3/style.css
@@ -29,3 +29,12 @@ hr {
 span {
     color: rgb(216, 139, 61);
 }
+
+html{
+    scroll-behavior: smooth;
+}
+
+a{
+    text-decoration: none;
+}
+/* เวลาคลิก link ในหน้าเดียวกันจะค่อยๆเลื่อน */
